/*
 * Copyright (C) 2013 Emeric Poupon
 *
 * This file is part of LMS.
 *
 * LMS is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * LMS is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with LMS.  If not, see <http://www.gnu.org/licenses/>.
 */

package LmsAPI;

message AuthRequest
{
	message Password
	{
		required string	user_login	= 1;
		required string	user_password	= 2;
	}

	enum Type
	{
		TypePassword		= 1;
	}

	required Type		type		= 1;

	optional Password	password	= 2;
}

message AuthResponse
{

	message PasswordResult
	{
		enum Type
		{
			TypePasswordInvalid	= 1;
			TypeLoginThrottling	= 2;	// The attempt was not processed because of throttling
			TypePasswordValid	= 3;
		}
		required Type	type	= 1;

		optional uint32	delay	= 2;	// in seconds, in case of PasswordInvalid/LoginThrottling
	}

	enum Type
	{
		TypePasswordResult	= 1;
	}

	required Type		type		= 1;

	optional PasswordResult password_result = 2;
}

